test/classes/marybeth/test_dispatch1-error.good
test_dispatch1-error.chpl:27: error: Cannot assign to borrowed pumps from borrowed shoe
